--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 header {
-    background: linear-gradient(to right, royalblue, rgb(87, 8, 87));
+    background: linear-gradient(to right, rgb(64, 104, 224), rgb(87, 8, 87));
     text-align: center;
     padding: 20px;
     font-family: 'Open Sans', sans-serif;
